<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="common_action_cancel">Cancel</string>
    <string name="common_action_select">Select</string>
    <string name="common_action_clear">Clear</string>
    <string name="common_action_more">More actions</string>
    <string name="common_action_save">Save</string>
    <string name="common_action_edit">Edit</string>
    <string name="common_action_delete">Delete</string>
    <string name="common_action_choose_photo">Choose photo</string>
    <string name="common_field_title">Title</string>
    <string name="common_field_description">Description</string>
    <string name="common_error_unsaved">This change could not be saved</string>
    <string name="common_action_back">Back</string>
    <string name="destination_dashboard">Dashboard</string>
    <string name="destination_dashboard_label">Home</string>
    <string name="destination_social_battery">Social battery</string>
    <string name="destination_social_battery_label">Battery</string>
    <string name="destination_tasks">Tasks</string>
    <string name="destination_goals">Goals</string>
    <string name="destination_settings">Settings</string>
    <string name="destination_settings_label">Settings</string>
    <string name="destination_finance">Finances</string>
    <string name="destination_finance_label">Finance</string>
    <string name="destination_notifications">Notifications</string>
</resources>
